--- a/gradle.properties
+++ b/gradle.properties
@@ -10,7 +10,7 @@ loader_version=0.15.9
 
 # Mod Properties
 mod_version=1.0.0
-maven_group=com.mammothproxy.mod
+maven_group=com.mammothproxy
 archives_base_name=template-mod
 
 # Dependencies
