Control bots with arrows on keyboard

--- a/gradle.properties
+++ b/gradle.properties
@@ -11,7 +11,8 @@ loader_version=0.15.9
 # Mod Properties
 mod_version=1.0.0
 maven_group=com.mammothproxy
-archives_base_name=template-mod
+archives_base_name=mammothproxy-mod
 
 # Dependencies
 fabric_version=0.42.0+1.16
+imgui_version=1.83.1
