--- a/build.gradle
+++ b/build.gradle
@@ -21,11 +21,13 @@ dependencies {
 	minecraft "com.mojang:minecraft:${project.minecraft_version}"
 	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
 	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
-
-	// Fabric API. This is technically optional, but you probably want it anyway.
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
-	implementation "com.github.JnCrMx:discord-game-sdk4j:v0.5.5"
+	implementation "io.github.spair:imgui-java-binding:${project.imgui_version}"
+	implementation "io.github.spair:imgui-java-lwjgl3:${project.imgui_version}"
+
+	implementation "io.github.spair:imgui-java-natives-windows:${project.imgui_version}"
+	implementation "io.github.spair:imgui-java-natives-linux:${project.imgui_version}"
 }
 
 processResources {
@@ -37,7 +39,7 @@ processResources {
 }
 
 tasks.withType(JavaCompile).configureEach {
-	it.options.release = 8
+	it.options.release = 17
 }
 
 java {
@@ -46,8 +48,8 @@ java {
 	// If you remove this line, sources will not be generated.
 	withSourcesJar()
 
-	sourceCompatibility = JavaVersion.VERSION_1_8
-	targetCompatibility = JavaVersion.VERSION_1_8
+	sourceCompatibility = JavaVersion.VERSION_17
+	targetCompatibility = JavaVersion.VERSION_17
 }
 
 jar {
